--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Compiled Lua sources
 luac.out
 
+# Anythin bin!
+bin*
+
 # luarocks build files
 *.src.rock
 *.zip
@@ -38,4 +41,3 @@ luac.out
 *.i*86
 *.x86_64
 *.hex
-
