Make files compile to binaries folder

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
 make:
-	nelua main.nelua --cc "zig cc" --cflags="-L ." -o ./out/bin && ./out/bin
+	nelua main.nelua --cc "zig cc" --cflags="-L ." -o ../binaries/bin && ../binaries/bin
 
 docs:
 	nelua --scripts gen-docs
